@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2006)
+ - Fixed bug 1496308: error message regarding 'cachedir'
  - Implemented RFE 1496319: Left align "Users" column in "Week (Users vertical)" view
  - Implemented RFE 1176218: can not select category in year-view
  - Implemented RFE 1075840: "Manage calendar of" during management
